--- a/imagecompressionipynb.ipynb
+++ b/imagecompressionipynb.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/singhpraachi/IMAGE_COMPRESSION/blob/main/imagecompressionipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5ae3lhjhw3lR"
       },
       "source": [
@@ -405,7 +415,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPDoPbyFFCa7O7gkwHjkCqF",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
